adding profile model and mapper to it
